--- a/src/index.scss
+++ b/src/index.scss
@@ -9,7 +9,7 @@
 }
 
 * {
-  font-family: 'Open Sans';
+  font-family: 'Open Sans', sans-serif;
   font-weight: 400;
   box-sizing: border-box;
   user-select: none;
